Nova changelog
===============
[B]v1.0.24[/B] 31.12.2018
 - Исправлена проблема с прокси
 - Исправленна проблема при поиске по допстранице
 - Исправлен адрес у rutor.lib

[B]v1.0.23[/B] 29.12.2018
 - Исправлена проблема с авторизацией на трекерах
 
[B]v1.0.22[/B] 28.12.2018
 - Обход недоступности контента на LostFilm
 - Настройки таймаута из Elementum
 - Правильное отображение названий в Kodi 18
 - Удалены torrent3d.ru и 3d-tracker.ru
 - Добавлен toloka.to
 - Добавлен torrent.by
 - Добавлен Lutik.tv 
 - Добавлена поддержка встроенного прокси Elementum

[B]v1.0.20[/B] 21.09.2018
 - Исправлен поиск по NNM
 - Последняя правка домена для tfile
 - Правки поиска на LostFilm

[B]v1.0.19[/B] 20.07.2018
 - Возвращение старой нормализации для LostFilm.
 - Обновлен домен у MegaPeer.
 - Исправлен поиск по BlueBird.

[B]v1.0.18[/B] - 05.07.2018
 - Откат изменений по преобразованию названия.
 - Исправлен поиск по Bluebird-hd.
 - Исправлено определение Remux.
 - Исправлено определение типа разрешения на Baibako.tv

[B]v1.0.17[/B] - 01.07.2018
 - Исправлен поиск сериала "Плащ и кинжал" на LostFilm
 - Удален провайдер serialz.tv
 - Добавлена настройка для вывода отладки парсера.
 - Обновлен фильтр для трейлеров.

 [B]v1.0.16[/B] - 26.05.2018
 - Исправлен глобальный поиск. Убраны параметры поиска фильмов с трекеров сериалов.
 - Очередная правка поиска на LostFilm. Добавил уведомление при ошибке авторизации.

[B]v1.0.15[/B] - 02.05.2018
 - Исправлен поиск ссылок на Kinozal.TV. Теперь MagnetURL генерируется скриптом

[B]v1.0.14[/B] - 04.04.2018
 - Исправлен поиск "Агенты ЩИТ" на Lostfilm
 - Исправлен поиск по tfile
 - Исправлены ошибки в идентификации Remux/BD-Disc

[B]v1.0.13[/B] - 26.03.2018
 - Добавлен BlueBird и специальный тип релиза Remux/Blu-Ray Disc (Отключен по умолчанию)
 - Поправлен поиск на Rustorka, ранее не все раздачи попадали в выдачу
 - Поправлен фильтр Telesync, ранее он не отключался
 - Добавлен (поправлен) поиск аниме
 
[B]v1.0.12[/B] - 19.03.2018