@@ -8,7 +8,7 @@
         <provides>executable</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
-        <news>v1.0.24 (31.12.2018)[CR] * Исправлена проблема с прокси [CR] * Исправленна проблема при поиске по допстранице[CR] * Исправлен адрес у rutor.lib[CR][CR]v1.0.23 (29.12.2018)[CR] * Исправлена проблема с авторизацией на трекерах[CR][CR]v1.0.22 (28.12.2018)[CR] * Обход недоступности контента на LostFilm[CR] * Настройки таймаута из Elementum[CR] * Правильное отображение названий в Kodi 18[CR] - Удалены torrent3d.ru и 3d-tracker.ru[CR] + Добавлен toloka.to[CR] + Добавлен torrent.by[CR] + Добавлен Lutik.tv [CR] + Добавлена поддержка встроенного прокси Elementum[CR][CR]v1.0.20 (21.09.2018)[CR] * Исправлен поиск по NNM[CR] * Последняя правка домена для tfile[CR] * Правки поиска на LostFilm[CR][CR]v1.0.19 (20.07.2018)[CR] - Возвращение старой нормализации для LostFilm.[CR] * Обновлен домен у MegaPeer.[CR] * Исправлен поиск по BlueBird[CR][CR]v1.0.18 (05.07.2018) [CR] - Откат изменений по преобразованию названия.[CR] * Исправлен поиск по Bluebird-hd.[CR] * Исправлено определение Remux.[CR] * Исправлено определение типа разрешения на Baibako.tv[CR][CR]v1.0.17 (01.07.2018)[CR] * Исправлен поиск сериала "Плащ и кинжал" на LostFilm[CR]- Удален провайдер serialz.tv[CR]+ Добавлена настройка для вывода отладки парсера.[CR]* Обновлен фильтр для трейлеров.[CR][CR]v1.0.16 (26.05.2018)[CR]* Исправлен глобальный поиск. Убраны параметры поиска фильмов с трекеров сериалов.[CR]* Очередная правка поиска на LostFilm. Добавил уведомление при ошибке авторизации.[CR]* v1.0.15 (02.05.2018)[CR]* Исправлен поиск ссылок на Kinozal.TV. Теперь MagnetURL генерируется скриптом[CR][CR]v1.0.14 (04.04.2018)[CR]* Исправлен поиск "Агенты ЩИТ" на Lostfilm[CR]* Исправлен поиск по tfile[CR]* Исправлены ошибки в идентификации Remux/BD-Disc[CR][CR]v1.0.13 (26.03.2018)[CR]+ Добавлен BlueBird и специальный тип релиза Remux/Blu-Ray Disc (Отключен по умолчанию)[CR]* Поправлен поиск на Rustorka, ранее не все раздачи попадали в выдачу[CR]* Поправлен фильтр Telesync, ранее он не отключался.[CR]+ Добавлен (поправлен) поиск аниме[CR][CR]v1.0.12 (19.03.2018)[CR]* Поправлен поиск на NewStudio и BaibaKo[CR]* Уменьшен таймаут для провайдера[CR]* Замена зеркала для NNM-Club[CR][CR]1.0.11 (05.03.2018)[CR]* Поправлен поиск на NewStudio[CR]+ В настройках добавлена вкладка "Эксперимент". Включение опций в данной вкладке могут вызывать проблемы в работе плагина[CR][CR]v1.0.10 (21.02.2018)[CR]* Домены lib активируются только с включенной опцией[CR]+ Добавлены 720i 1080i в фильтра 720p 1080p[CR]*Поправлена фильтрация 4К[CR][CR]v1.0.9 (20.02.2018)[CR]* Отображение размера раздач на Lostfilm.TV[CR]* Поправлен поиск на Casstudio.tv[CR][CR]v1.0.8 (20.02.2018)[CR]- Kinozal.guru заменён на Kinozal.tv[CR]+ Добавлен Casstudio.tv</news>
+        <news>[CR] + Добавлен провайдер YOHOHO[CR] * Поправлена авторизация и поиск сериалов на Toloka[CR][CR]v1.0.24 (31.12.2018)[CR] * Исправлена проблема с прокси [CR] * Исправленна проблема при поиске по допстранице[CR] * Исправлен адрес у rutor.lib[CR][CR]v1.0.23 (29.12.2018)[CR] * Исправлена проблема с авторизацией на трекерах[CR][CR]v1.0.22 (28.12.2018)[CR] * Обход недоступности контента на LostFilm[CR] * Настройки таймаута из Elementum[CR] * Правильное отображение названий в Kodi 18[CR] - Удалены torrent3d.ru и 3d-tracker.ru[CR] + Добавлен toloka.to[CR] + Добавлен torrent.by[CR] + Добавлен Lutik.tv [CR] + Добавлена поддержка встроенного прокси Elementum[CR][CR]v1.0.20 (21.09.2018)[CR] * Исправлен поиск по NNM[CR] * Последняя правка домена для tfile[CR] * Правки поиска на LostFilm[CR][CR]v1.0.19 (20.07.2018)[CR] - Возвращение старой нормализации для LostFilm.[CR] * Обновлен домен у MegaPeer.[CR] * Исправлен поиск по BlueBird[CR][CR]v1.0.18 (05.07.2018) [CR] - Откат изменений по преобразованию названия.[CR] * Исправлен поиск по Bluebird-hd.[CR] * Исправлено определение Remux.[CR] * Исправлено определение типа разрешения на Baibako.tv[CR][CR]v1.0.17 (01.07.2018)[CR] * Исправлен поиск сериала "Плащ и кинжал" на LostFilm[CR]- Удален провайдер serialz.tv[CR]+ Добавлена настройка для вывода отладки парсера.[CR]* Обновлен фильтр для трейлеров.[CR][CR]v1.0.16 (26.05.2018)[CR]* Исправлен глобальный поиск. Убраны параметры поиска фильмов с трекеров сериалов.[CR]* Очередная правка поиска на LostFilm. Добавил уведомление при ошибке авторизации.[CR]* v1.0.15 (02.05.2018)[CR]* Исправлен поиск ссылок на Kinozal.TV. Теперь MagnetURL генерируется скриптом[CR][CR]v1.0.14 (04.04.2018)[CR]* Исправлен поиск "Агенты ЩИТ" на Lostfilm[CR]* Исправлен поиск по tfile[CR]* Исправлены ошибки в идентификации Remux/BD-Disc[CR][CR]v1.0.13 (26.03.2018)[CR]+ Добавлен BlueBird и специальный тип релиза Remux/Blu-Ray Disc (Отключен по умолчанию)[CR]* Поправлен поиск на Rustorka, ранее не все раздачи попадали в выдачу[CR]* Поправлен фильтр Telesync, ранее он не отключался.[CR]+ Добавлен (поправлен) поиск аниме[CR][CR]v1.0.12 (19.03.2018)[CR]* Поправлен поиск на NewStudio и BaibaKo[CR]* Уменьшен таймаут для провайдера[CR]* Замена зеркала для NNM-Club[CR][CR]1.0.11 (05.03.2018)[CR]* Поправлен поиск на NewStudio[CR]+ В настройках добавлена вкладка "Эксперимент". Включение опций в данной вкладке могут вызывать проблемы в работе плагина[CR][CR]v1.0.10 (21.02.2018)[CR]* Домены lib активируются только с включенной опцией[CR]+ Добавлены 720i 1080i в фильтра 720p 1080p[CR]*Поправлена фильтрация 4К[CR][CR]v1.0.9 (20.02.2018)[CR]* Отображение размера раздач на Lostfilm.TV[CR]* Поправлен поиск на Casstudio.tv[CR][CR]v1.0.8 (20.02.2018)[CR]- Kinozal.guru заменён на Kinozal.tv[CR]+ Добавлен Casstudio.tv</news>
         <summary lang="en">Elementum torrents provider</summary>
         <summary lang="ru">Elementum трекер-провайдер</summary>
         <description lang="en">Elementum Nova is a lean and mean multi-provider for Elementum.</description>
