@@ -32,6 +32,10 @@
       <setting id="lutik_alias" label="32077" type="text" default="" subsetting="true" visible="eq(-1,true)" />
       <setting id="lutik_contains" type="enum" label="32078" subsetting="true" lvalues="32079|32080|32081" visible="eq(-2,true)" />
 
+    <setting label="Yohoho" id="use_yohoho" type="bool" default="false" />
+      <setting id="yohoho_alias" label="32077" type="text" default="" subsetting="true" visible="eq(-1,true)" />
+      <setting id="yohoho_contains" type="enum" label="32078" subsetting="true" lvalues="32079|32080|32081" visible="eq(-2,true)" />
+
     <setting label="32014" type="lsep" />
     <setting label="[B]0day[/B]" id="use_0day" type="bool" default="false" />
       <setting id="0day_username" label="32015" type="text" default="" subsetting="true" visible="eq(-1,true)" />
