@@ -1,5 +1,8 @@
 Nova changelog
 ===============
+ - Добавлен провайдер YOHOHO
+ - Поправлена авторизация и поиск сериалов на Toloka
+
 [B]v1.0.24[/B] 31.12.2018
  - Исправлена проблема с прокси
  - Исправленна проблема при поиске по допстранице
